# catique-hub

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_MAP.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vite.dev-tauri.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.storybook/: main.ts  preview.ts
bindings/: ActivityEvent.ts  AgentReport.ts  AgentReportKind.ts  AppError.ts  Attachment.ts  Board.ts  ClientInstructions.ts  Column.ts  ConnectedClient.ts  ConnectionStatus.ts  ImportOptions.ts  ImportReport.ts  ImportTarget.ts  McpCallLog.ts  McpServer.ts  McpServerConnectionHint.ts  McpServerHealthState.ts  McpServerStatus.ts  McpTool.ts  McpToolGroup.ts  McpToolSource.ts  McpToolWithOrigin.ts  OriginRef.ts  PreflightResults.ts  ProjectFile.ts  Prompt.ts  PromptContentVersionView.ts  PromptGroup.ts  PromptTagMapEntry.ts  PromptWithOrigin.ts  PrompteryDbInfo.ts  ProxiedServerMeta.ts  (+33 more)
crates/api/: Cargo.toml
crates/api/src/: error.rs  events.rs  lib.rs  state.rs
crates/api/src/handlers/: attachments.rs  boards.rs  clients.rs  columns.rs  data.rs  events.rs  import.rs  mcp_servers.rs  mcp_tool_groups.rs  mcp_tools.rs  mod.rs  project_files.rs  prompt_groups.rs  prompts.rs  reports.rs  role_notes.rs  roles.rs  search.rs  secrets.rs  settings.rs  sidecar.rs  skills.rs  spaces.rs  tags.rs  task_links.rs  task_templates.rs  tasks.rs
crates/api/src/mcp_bridge/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: agent_files.rs  attachments.rs  boards.rs  clients.rs  columns.rs  connected_providers.rs  data.rs  error.rs  error_map.rs  import.rs  lib.rs  mcp_aggregated.rs  mcp_dispatch.rs  mcp_proxy.rs  mcp_servers.rs  mcp_tool_groups.rs  mcp_tools.rs  project_files.rs  prompt_groups.rs  prompts.rs  reports.rs  resolver_backfill.rs  role_notes.rs  roles.rs  search.rs  settings.rs  skill_import.rs  skill_steps.rs  skills.rs  spaces.rs  tags.rs  task_links.rs  task_templates.rs  tasks.rs  workflow.rs
crates/application/tests/: import_roundtrip.rs  mcp_aggregated_smoke.rs  role_sync_mcp_tools.rs  role_sync_skill_attachments.rs  search_smoke.rs  settings_smoke.rs  upload_smoke.rs
crates/clients/: Cargo.toml
crates/clients/src/: error.rs  lib.rs
crates/clients/src/adapters/: claude_code.rs  claude_desktop.rs  codex.rs  common.rs  cursor.rs  mod.rs  opencode.rs  qwen.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent_report.rs  attachment.rs  board.rs  client_instructions.rs  client_role_sync.rs  column.rs  connected_client.rs  connected_provider.rs  import.rs  lib.rs  mcp_call_log.rs  mcp_server.rs  mcp_tool.rs  mcp_tool_group.rs  project_file.rs  prompt.rs  prompt_group.rs  prompt_tag_map.rs  role.rs  role_note.rs  search.rs  skill.rs  skill_attachment.rs  skill_step.rs  space.rs  tag.rs  task.rs  task_bundle.rs  task_link.rs  task_match.rs  task_rating.rs  task_template.rs
crates/domain/tests/: types_export.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/benches/: resolver.rs  search_by_cat_and_space.rs
crates/infrastructure/src/: db.rs  fs.rs  lib.rs  paths.rs  project_files.rs
crates/infrastructure/src/clients/: connected_clients.rs  error.rs  mod.rs  registry.rs
crates/infrastructure/src/db/: backup.rs  event_log.rs  import.rs  mod.rs  pool.rs  runner.rs
crates/infrastructure/src/db/migrations/: 001_initial.sql  002_skills_mcp_tools.sql  003_board_description.sql  004_cat_as_agent_phase1.sql  005_prompt_icons.sql  006_prompt_examples.sql  007_prompt_group_icons.sql  008_space_board_icons_colors.sql  009_default_boards.sql  010_backfill_default_boards.sql  011_space_prompts.sql  013_mcp_servers.sql  014_board_column_space_skills.sql  015_space_workflow_graph.sql  016_default_board_naming_and_constraints.sql  017_system_role_display_names.sql  018_role_icon.sql  019_default_columns_backfill.sql  020_space_project_folder_path.sql  021_connected_providers.sql  022_mcp_keychain_namespace.sql  023_mcp_tools_link.sql  024_mcp_call_log.sql  025_skill_attachments.sql  026_role_notes.sql  027_skill_steps.sql  028_change_events.sql  029_task_links.sql  030_task_urgency.sql  031_columns_icon_color.sql  032_task_overrides_v2.sql  033_task_effective_counts.sql  034_content_versions.sql  035_activity_log_scope.sql  036_pinned_recent_kv.sql  037_prompt_group_attachments.sql  038_mcp_tool_groups.sql  039_mcp_server_attachments.sql  040_drop_pinned_boards.sql  041_remove_dirizher_role.sql  (+3 more)
crates/infrastructure/src/db/repositories/: agent_reports.rs  attachments.rs  boards.rs  columns.rs  content_versions.rs  inheritance.rs  mcp_call_log.rs  mcp_server_attachments.rs  mcp_servers.rs  mcp_tool_group_attachments.rs  mcp_tool_groups.rs  mcp_tools.rs  mod.rs  pinned_recent.rs  prompt_group_attachments.rs  prompt_groups.rs  prompts.rs  role_notes.rs  roles.rs  search.rs  settings.rs  skill_attachments.rs  skill_steps.rs  skills.rs  spaces.rs  tags.rs  task_links.rs  task_overrides_v2.rs  task_ratings.rs  task_templates.rs  tasks.rs  util.rs
crates/infrastructure/src/import/: attachments.rs  copy.rs  git_fetch.rs  mod.rs  preflight.rs  schema.rs  sequencer.rs
crates/infrastructure/src/secrets/: mod.rs
crates/infrastructure/tests/: event_log_multi_connection.rs  schema_drift.rs
crates/mcp-server-bin/: Cargo.toml
crates/mcp-server-bin/src/: jsonrpc.rs  lib.rs  main.rs  upstream.rs
crates/mcp-server-bin/tests/: proxy_roundtrip.rs  stdio_smoke.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: lib.rs
experiments/sidecar-spike/src-tauri/: Cargo.toml  tauri.conf.json
experiments/sidecar-spike/src-tauri/capabilities/: default.json
experiments/sidecar-spike/src-tauri/icons/: icon.icns
experiments/sidecar-spike/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: boards_ipc.rs
(+1168 files in other folders)
