#
# Catique HUB — Cargo workspace root.
#
# Wave E1.2 (Olga, 2026-04-28): converted the original single-crate
# `src-tauri/` scaffold (Katya, commit 4d62812) into a 5-crate workspace
# per ADR-0001 §OQ-3 (modular per-domain organisation). Members below
# implement Clean-Architecture-ish layering:
#
#   domain         — pure value objects + entity structs (no IO)
#   application    — use cases, orchestrating domain + infrastructure
#   infrastructure — SQLite + filesystem + secret store backends
#   api            — Tauri IPC layer: handlers/<domain>.rs + AppError
#   src-tauri      — Tauri shell binary: window setup + command registry
#
# Versions for serde, serde_json, ts-rs and rusqlite are exact-pinned
# per NFR §5.3 dep-hygiene (these are protocol- or DB-touching surfaces
# where silent minor bumps could break the IPC/storage contract).
# Everything else uses caret SemVer.
#
# Edition + rust-version + license are inherited via [workspace.package]
# so each member can `edition.workspace = true` instead of repeating.
#

[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/clients",
    "crates/infrastructure",
    "crates/api",
    "crates/sidecar",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "Elastic-2.0"
authors = ["dzenlotus"]
repository = "https://github.com/dzenlotus/catique-hub"

[workspace.dependencies]
# Exact-pinned (NFR §5.3): protocol- and storage-touching crates.
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
ts-rs = { version = "=8.1.0", features = ["serde-compat", "chrono-impl"] }
rusqlite = { version = "=0.32.1", features = ["bundled"] }

# E2 (Olga): SQLite connection pool and migration runner machinery.
# All exact-pinned because they touch the storage layer (NFR §5.3).
# r2d2_sqlite ^0.25 is the version family that requires rusqlite 0.32
# (0.24 caps at rusqlite 0.31, which would conflict with our pin above —
# brief asked for "0.24, verify exact versions"; the version-bump to 0.25
# is a forced consequence of the rusqlite pin).
r2d2 = "=0.8.10"
r2d2_sqlite = "=0.25.0"
include_dir = "=0.7.4"
nanoid = "=0.4.0"
sha2 = "=0.10.8"

# Caret-allowed: stable, well-maintained, no IPC contract impact.
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
dirs = "5"

# Tauri pinned to the same minor as src-tauri/ scaffold (Katya, E1.1).
tauri = { version = "2.10", default-features = false }
tauri-build = { version = "2.5", features = [] }
tauri-plugin-dialog = "2"

# Test helpers — not pulled into production binaries.
tempfile = "3"

# Bench harness — gated as `[dev-dependencies]` everywhere; never
# pulled into release artefacts. Pinned to the 0.5.x line because
# criterion's MSRV bump in 0.6 sits above our `rust-version = 1.81`
# floor; the 0.5 API surface is stable for our needs.
criterion = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
