[package]
name = "catique-hub"
description = "Catique HUB — desktop app for AI agent orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Tauri shell uses default-features (window, app, etc.) at the binary
# layer; the workspace pin disables them, so re-enable defaults here.
tauri = { workspace = true, default-features = true }
tauri-plugin-dialog.workspace = true
serde.workspace = true
serde_json.workspace = true

# Workspace crates — Wave-E1.2 split.
catique-domain = { path = "../crates/domain" }
catique-application = { path = "../crates/application" }
# E2 (Olga): shell now opens the SQLite pool + runs migrations on
# startup, so it depends on infrastructure directly.
catique-infrastructure = { path = "../crates/infrastructure" }
catique-api = { path = "../crates/api" }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"

# `[profile.*]` lives at workspace root since E1.2; do not redeclare it
# here (Cargo emits a warning when profiles appear in non-root members).
