[package]
name = "catique-api"
description = "Tauri IPC layer for Catique HUB. Per-domain handler modules + AppError enum."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_api"
path = "src/lib.rs"

[dependencies]
catique-domain = { path = "../domain" }
catique-application = { path = "../application" }
catique-infrastructure = { path = "../infrastructure" }

serde.workspace = true
serde_json.workspace = true
# ts-rs no longer derived directly here — `AppError` moved to
# `catique-application` in E2 — but kept as a workspace dep so future
# IPC-only types (e.g. `BoardCreateInput` if we ever break it out from
# positional args) can `#[derive(TS)]` without a Cargo.toml round-trip.
ts-rs.workspace = true
thiserror.workspace = true

# Tauri pulled in for `#[tauri::command]` and `tauri::State<>`.
# `default-features = false` from workspace; we don't need any of the
# bundle/protocol features at the IPC-layer level.
tauri.workspace = true

# E2.5 (Katya, 2026-04-28): `OnceCell` for the AppHandle slot in
# AppState. The handle is set once during the Tauri `setup` callback and
# read by every handler post-mutation. Caret OK — once_cell is a thin,
# stable building block (MIT/Apache-2.0 dual). Already pulled in
# transitively via tauri/serde, so adding it to our direct deps does not
# expand the dependency graph.
once_cell = "1.21"

# E5 (upload_attachment): used to generate a collision-safe id prefix for
# the on-disk storage filename. Same version and macro as infrastructure's
# util::new_id() so the id alphabet is consistent across the codebase.
nanoid.workspace = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
# Stub handlers don't yet take/return non-trivial types.
needless_pass_by_value = "allow"
unused_async = "allow"
doc_markdown = "allow"
