[package]
name = "catique-application"
description = "Use-case layer for Catique HUB. Orchestrates domain + infrastructure; no IO of its own."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_application"
path = "src/lib.rs"

[dependencies]
catique-domain = { path = "../domain" }
catique-infrastructure = { path = "../infrastructure" }
catique-clients = { path = "../clients" }

# AppError lives here (E2: moved from `catique-api`) — needs serde + ts-rs
# for the same reasons documented in `crates/domain/Cargo.toml`.
serde.workspace = true
ts-rs.workspace = true
thiserror.workspace = true

# Rusqlite is brought in for the typed `Error` / `ErrorCode` patterns the
# DbError → AppError mapper inspects, and for the seed-helper used by
# the use-case unit tests.
rusqlite.workspace = true

# MCP tools use case: validate schema_json as parseable JSON at create time.
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
