[package]
name = "catique-application"
description = "Use-case layer for Catique HUB. Orchestrates domain + infrastructure; no IO of its own."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_application"
path = "src/lib.rs"

[dependencies]
catique-domain = { path = "../domain" }
catique-infrastructure = { path = "../infrastructure" }
catique-clients = { path = "../clients" }

# AppError lives here (E2: moved from `catique-api`) — needs serde + ts-rs
# for the same reasons documented in `crates/domain/Cargo.toml`.
serde.workspace = true
ts-rs.workspace = true
thiserror.workspace = true

# Rusqlite is brought in for the typed `Error` / `ErrorCode` patterns the
# DbError → AppError mapper inspects, and for the seed-helper used by
# the use-case unit tests.
rusqlite.workspace = true

# MCP tools use case: validate schema_json as parseable JSON at create time.
serde_json.workspace = true

# Round-21 Connected Providers orchestrator: needs broadcast + watch +
# mpsc channels and a Tokio runtime to spawn the background task.
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# SKILL-S10: validate git-attachment URLs at the use-case boundary so
# the same check fires regardless of the caller (IPC handler, future
# CLI, integration test). See SkillsUseCase::add_git_attachment.
url.workspace = true

# SKILL-S10: collision-safe storage-id prefix for blob filenames. Same
# alphabet as `infrastructure::repositories::util::new_id` so the IDs
# stay readable across the codebase.
nanoid.workspace = true

# W1 (catique-hub-mcp standalone binary): the MCP dispatch surface
# accepts base64-encoded attachment blobs from agents. Same 0.22 line
# the api crate already uses so `upload_attachment_blob` /
# `add_skill_file_attachment` can decode at the application boundary
# without re-entering the IPC layer.
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
