[package]
name = "catique-infrastructure"
description = "Infrastructure layer for Catique HUB — SQLite, filesystem, secret store backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_infrastructure"
path = "src/lib.rs"

[dependencies]
catique-domain = { path = "../domain" }

# Bundled rusqlite — ships SQLite C source statically with the crate, so
# the resulting binary works on Win/macOS without a system libsqlite. The
# `bundled` feature carries the SQLite source under a public-domain
# license (NFR §6 Allowed-set CC0/Unlicense equivalent).
rusqlite.workspace = true

# r2d2 connection pool + r2d2_sqlite glue. Pool size + per-connection
# PRAGMA setup live in `db::pool` (NFR §3.3 lock timeouts).
r2d2.workspace = true
r2d2_sqlite.workspace = true

# Compile-time embedding of the migration `.sql` files under
# `src/db/migrations/`. The `include_dir!` macro reads at build time,
# so changing a `.sql` triggers a rebuild — no runtime FS dependency.
include_dir.workspace = true

# Stable random IDs for entities. nanoid 0.4 is the last MIT-licensed
# release before the crate moved to a different licence model.
nanoid.workspace = true

# SHA-256 of applied migration SQL (tamper detection in `_migrations`).
sha2.workspace = true

# Error enum derives.
thiserror.workspace = true

# `dirs` resolves XDG / platform-conventional data paths (used by
# `paths::app_data_dir`). MIT/Apache-2.0.
dirs.workspace = true

# `tokio` is included so E2 use cases can use `tokio::task::spawn_blocking`
# around rusqlite calls (rusqlite is sync; Tauri commands are async).
tokio.workspace = true

# Used by repository unit tests to emit deterministic timestamps when
# the row's caller doesn't pass one explicitly.
chrono.workspace = true

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
