[package]
name = "catique-infrastructure"
description = "Infrastructure layer for Catique HUB — SQLite, filesystem, secret store backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_infrastructure"
path = "src/lib.rs"

[dependencies]
catique-domain = { path = "../domain" }

# Bundled rusqlite — ships SQLite C source statically with the crate, so
# the resulting binary works on Win/macOS without a system libsqlite. The
# `bundled` feature carries the SQLite source under a public-domain
# license (NFR §6 Allowed-set CC0/Unlicense equivalent).
rusqlite.workspace = true

# r2d2 connection pool + r2d2_sqlite glue. Pool size + per-connection
# PRAGMA setup live in `db::pool` (NFR §3.3 lock timeouts).
r2d2.workspace = true
r2d2_sqlite.workspace = true

# JSON serialization for the connected-clients registry (ctq-67).
serde_json.workspace = true
serde.workspace = true

# Compile-time embedding of the migration `.sql` files under
# `src/db/migrations/`. The `include_dir!` macro reads at build time,
# so changing a `.sql` triggers a rebuild — no runtime FS dependency.
include_dir.workspace = true

# Stable random IDs for entities. nanoid 0.4 is the last MIT-licensed
# release before the crate moved to a different licence model.
nanoid.workspace = true

# SHA-256 of applied migration SQL (tamper detection in `_migrations`).
sha2.workspace = true

# Error enum derives.
thiserror.workspace = true

# `dirs` resolves XDG / platform-conventional data paths (used by
# `paths::app_data_dir`). MIT/Apache-2.0.
dirs.workspace = true

# `tokio` is included so E2 use cases can use `tokio::task::spawn_blocking`
# around rusqlite calls (rusqlite is sync; Tauri commands are async).
tokio.workspace = true

# SKILL-V2-A: HTTP client for the git-fetch import pipeline. Workspace
# pin is `default-features = false` + `rustls-tls` — keeps OpenSSL out
# of the supply chain.
reqwest.workspace = true

# SKILL-V2-A: streamed-body size cap relies on
# `futures_util::StreamExt::next` over reqwest's `bytes_stream`.
futures-util.workspace = true

# SKILL-V2-A: URL normalisation for the github/gitlab blob→raw mapper.
# Already a workspace dep (SKILL-S10 brought it in for git-attachment
# validation); we promote it onto this crate's direct surface.
url.workspace = true

# Used by repository unit tests to emit deterministic timestamps when
# the row's caller doesn't pass one explicitly.
chrono.workspace = true

# OS-keychain backend for the MCP pass-through proxy (ADR-0008 /
# PROXY-S3 round 2 / ctq-130). The workspace dep is declared with
# `default-features = false`; each target below opts into its
# platform-native credential store. Without these feature flags
# keyring falls back to an in-memory mock store, which would silently
# drop secrets on app restart.
keyring.workspace = true

# Per-target keyring features. The Linux entry uses `sync-secret-service`
# (libsecret via dbus) plus `crypto-rust` to keep openssl out of the
# supply chain. Headless CI without a running Secret Service daemon
# cannot exercise this backend — see the test module-level comment in
# `src/secrets/mod.rs` for the gating strategy.
[target.'cfg(target_os = "macos")'.dependencies.keyring]
workspace = true
features = ["apple-native"]

[target.'cfg(target_os = "windows")'.dependencies.keyring]
workspace = true
features = ["windows-native"]

[target.'cfg(target_os = "linux")'.dependencies.keyring]
workspace = true
features = ["sync-secret-service", "crypto-rust"]

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

# SKILL-V2-A: in-process HTTP mock server for `git_fetch::fetch_text`
# round-trip tests. No Docker / network — wiremock-rs spawns a hyper
# server on an ephemeral port.
wiremock.workspace = true

# wiremock requires a multi-threaded Tokio runtime in async tests.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# ADR-0006 (resolver perf gate, P99 < 50 ms): criterion harness over a
# 10k-task seed fixture. Lives at `benches/resolver.rs`; running takes
# ~30 s on an M-series Mac so it is excluded from default `cargo test`.
[[bench]]
name = "resolver"
harness = false

# ctq-84 (cat-as-Agent search perf gate, P99 < 100 ms on 10k tasks).
# Same harness style as `resolver` — `cargo bench` only.
[[bench]]
name = "search_by_cat_and_space"
harness = false

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
