[package]
name = "catique-sidecar"
description = "MCP sidecar lifecycle manager for Catique HUB — ADR-0002 spike (ctq-56)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "catique_sidecar"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "process", "io-util", "time"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
