# sidecar-spike — standalone Tauri shell for ctq-56 / ADR-0002.
#
# NOT a workspace member of catique-hub root. The whole point of this spike
# is isolation: the root `Cargo.toml` is untouched. The `[workspace]` table
# below makes this crate its own one-member workspace so cargo never tries
# to walk upward to the root manifest.

[package]
name = "sidecar-spike-shell"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]
# Empty members list = this crate is its own workspace, fully isolated
# from /Users/.../catique-hub/Cargo.toml. Required by the spike scope.

[lib]
name = "sidecar_spike_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "process", "time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
